readme example added

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "A simple select box",
     "keywords": ["select","html","javascript"],
     "type": "component",
-    "main": "select.js",
+    "main": "dist/js/select.js",
+    "version": "1.0.0",
     "author": "gunabalans@yahoo.com",
     "homepage":"https://www.netkathir.com",
     "license": "MIT",
